--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
     <script src="script.js"></script>
 </head>
 <body>
-    
+    <div id = buttons-container>
+        <button id = rock>Rock</button>
+        <button id = paper>Paper</button>
+        <button id = scissors>Scissors</button>
+    </div>
 
 </body>
 
