--- a/index.html
+++ b/index.html
@@ -3,14 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <title>Rock Paper Scissors</title>
-    <script src="script.js"></script>
+    
 </head>
 <body>
-    <div id = buttons-container>
-        <button id = rock>Rock</button>
-        <button id = paper>Paper</button>
-        <button id = scissors>Scissors</button>
+    <div id = 'buttons-container'>
+        <button id = 'rock'>Rock</button>
+        <button id = 'paper'>Paper</button>
+        <button id = 'scissors'>Scissors</button>
     </div>
+    <div id = 'results'></div>
+
+    <script src="script.js"></script>
 
 </body>
 
