--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 </head>
 <body>
     <div id = 'buttons-container'>
-        <button id = 'rock'>Rock</button>
-        <button id = 'paper'>Paper</button>
-        <button id = 'scissors'>Scissors</button>
+        <button class = "playerOptions" id = 'rock'>Rock</button>
+        <button class = "playerOptions" id = 'paper'>Paper</button>
+        <button class = "playerOptions" id = 'scissors'>Scissors</button>
     </div>
     <div id = 'results'></div>
 
