added start button

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <button class = "playerOptions" id = 'rock'>Rock</button>
         <button class = "playerOptions" id = 'paper'>Paper</button>
         <button class = "playerOptions" id = 'scissors'>Scissors</button>
+        <button id = 'start'>Start</button>
     </div>
     <div id = 'results'></div>
 
