--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Rock Paper Scissors</title>
-    
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+    <div id = "heading">
+        <h1>Rock Paper Scissors</h1>
+    </div>
     <div id = 'buttons-container'>
-        <button class = "playerOptions" id = 'rock'>Rock</button>
-        <button class = "playerOptions" id = 'paper'>Paper</button>
-        <button class = "playerOptions" id = 'scissors'>Scissors</button>
         <button id = 'start'>Start</button>
+        <button id = 'restart'>Restart</button>
     </div>
     <div id = 'results'></div>
 
