--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <button id = 'start'>Start</button>
         <button id = 'restart'>Restart</button>
     </div>
-    <div id = playerButtons></div>
+    <div id = player-buttons></div>
     <div id = 'results'></div>
 
     <script src="script.js"></script>
